[package]
name = "net-tools-rs"
version = "0.1.0"
edition = "2024"
authors = [
  "Nadzeya Hutsko <nadzya.info@gmail.com>",
  "Lena Voytek <lena@voytek.dev>",
]
license = "GPL-2.0-or-later"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
nix = { version = "0.30", features = ["hostname", "net"] }
thiserror = "2.0"

[[bin]]
name = "hostname"
path = "bin/hostname.rs"

[lints.rust]
unsafe_op_in_unsafe_fn = { level = "deny" }

[lints.clippy]
undocumented_unsafe_blocks = "warn"
