[package]
name = "net-tools-rs"
version = "0.1.1"
edition = "2024"
authors = [
  "Nadzeya Hutsko <nadzya.info@gmail.com>",
  "Lena Voytek <lena@voytek.dev>",
]
license = "GPL-2.0-or-later"
description = "Rust implementation of net-tools (Linux networking base tools)"
repository = "https://github.com/rust-swifties/net-tools-rs"
keywords = ["cli", "ifconfig", "hostname", "arp", "netstat"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dns-lookup = "3"
libc = "0.2"
nix = { version = "0.30", features = ["hostname", "net"] }
thiserror = "2.0"

[[bin]]
name = "arp"
path = "bin/arp.rs"

[[bin]]
name = "hostname"
path = "bin/hostname.rs"

[[bin]]
name = "nameif"
path = "bin/nameif.rs"

[lints.rust]
unsafe_op_in_unsafe_fn = { level = "deny" }

[lints.clippy]
undocumented_unsafe_blocks = "warn"
